--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,9 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "moment": "^2.17.1",
-    "react-maskedinput": "^3.3.3"
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-maskedinput": "^3.3.3",
+    "react-router": "^3.0.0"
   }
 }
